A11y fix: contrast ratio

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,7 +13,7 @@
   --tw-bg-opacity-medium: 0.5;
   --tw-bg-opacity-full: 1;
 
-  --blue-gray-bg: #1e2735;
+  --blue-gray-bg: #18202c;
   --argentina-bluesky: #75aadb;
 
   --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
